--- a/Reporte_Jugadores.html
+++ b/Reporte_Jugadores.html
@@ -18,21 +18,14 @@
 
 <tr>
 <td>2</td>
-<td>adfa</td>
+<td>luis</td>
 <td>0</td>
 </tr>
 
 
 <tr>
 <td>3</td>
-<td>adf</td>
-<td>0</td>
-</tr>
-
-
-<tr>
-<td>4</td>
-<td>Jose</td>
+<td>Prueba</td>
 <td>0</td>
 </tr>
 
